BMSSimplificationEclipseWS/zEUFULL-PRODMigration-MetadataWithPermsXLation/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Color_vod__c</fullName>
        <formula>IF(NOT( IsPersonAccount ),&apos;Green&apos;,IF( ISPICKVAL(Gender_vod__c,&apos;F&apos;),&apos;Red&apos;,IF(ISPICKVAL(Gender_vod__c,&apos;M&apos;),&apos;Blue&apos;,&apos;Clear&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Color</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commercial_Appeals_Regularly_BMS_US__c</fullName>
        <label>Commercial Appeals Regularly Submitted:</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commercial_BMS_US__c</fullName>
        <label>% Commercial:</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Commercial_Patient_Days_1000__c</fullName>
        <description>Commercial Patient Days.  Used for MCO and MCO Plan accounts</description>
        <label>Commercial Patient Days/1000</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Commercial_Premiums_PMPM__c</fullName>
        <description>Per patient per month commercial premiums.  Used by MCO and MCO Plan accounts.</description>
        <label>Commercial Premiums (PMPM)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Community_Position_BMS_CN__c</fullName>
        <description>Community position of the professional</description>
        <label>Community Position</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Congress_Debriefs_BMS_EMEA__c</fullName>
        <label>Congress Debriefs?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contracts_Process__c</fullName>
        <description>Contract Process at this account.  Used for MCO and MCO Plan accounts.</description>
        <label>Contracts Process</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Coumadin_Clinic_Supervisor_BMS_US__c</fullName>
        <description>VPRO - April 2013 - BMS Global Requirements &amp; Design: IT Point Person specification for Global Sales CV (sampling) users</description>
        <label>Coumadin Clinic Supervisor</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Country where the Account is located.</description>
        <label>Country</label>
        <referenceTo>Country_vod__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credentials_vod__c</fullName>
        <description>Picklist of the professional&apos;s (Person Account) credentials. Edit the picklist to change the available credentials.  Used by HMS data load.</description>
        <label>Professional Designation</label>
        <picklist>
            <picklistValues>
                <fullName>ADM-Administrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AN-Advanced Nurse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUD-Audiologist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMR-Billing Manager (Staff)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSN-Bachelor of Science in Nursing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CFO-Chief Financial Officer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CMA-Certified Medical Assistant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CNA-Certified Nursing Assistant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CNA-Certified Registered Nurse Anesthetist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CNS-Clinical Nurse Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CR-Cancer Registrar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRP-Chiropractor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CW-Case Worker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DDS-Doctor of Dental Surgery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DN-Director Of Nursing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DNU-Discharge Nurse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DO-Doctor of Osteopathy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DPM-Doctor of Podiatric Medicine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DST-Dosimetrist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPD-Epidemiologist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FIN-Financial Counselor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HE-Health Educator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICO-Insurance Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LPN-Licensed Practical Nurse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LT-Lab Technician</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA-Medical Assistant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD-Medical Doctor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA-Not Applicable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ND-Naturopathic Doctor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NE-Nurse Educator</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Engagement_Plan_BME_EMEA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>VPRO - November 2013 - BMS EMEA Core Requirements &amp; Design: Custom field to denote if a customer is on an engagement plan.</description>
        <label>TL Engagement Plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Master_Status_vod__c</fullName>
        <description>Corresponds to the validation status of a record in the customer master. This field should not be modified.</description>
        <label>Customer Master Status</label>
        <picklist>
            <picklistValues>
                <fullName>Staging_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Valid_vod</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Under_Review_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Type_BMS_EMEA__c</fullName>
        <description>BMS ACN - September 2015: Denotes the Customer Type (Individual Account Type/Organization Account Type) based on the customer displayed. To be used in GAS Field Result Set.</description>
        <formula>IF(Organizati_Account_Type_formula_BMS_EMEA__c = &apos;&apos;, Individual_Account_Type_formula_BMS_EMEA__c ,Organizati_Account_Type_formula_BMS_EMEA__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DAI_Scoring_BMS_EMEA__c</fullName>
        <label>DAI Scoring</label>
        <picklist>
            <picklistValues>
                <fullName>Decision Maker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adviser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inform</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DDD_Number_BMS__c</fullName>
        <label>DDD Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DHG_BMS_EMEA__c</fullName>
        <description>VPRO EMEA May 2014: user input. Specific to Germany.</description>
        <label>DHG</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_REMS_Material_Provided_BMS_US__c</fullName>
        <description>VPRO - May 2013 - BMS Global Requirements &amp; Design: Profiling question for Global Sales CV (sampling) users</description>
        <label>Date REMS Material Provided</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Planned_PT_Meeting_BMS_US__c</fullName>
        <description>VPRO - April 2013 - BMS Global Requirements &amp; Design: Date of Planned P&amp;T Meeting specification for Global Sales CV (sampling) users on organization accounts</description>
        <label>Date of Planned P&amp;T Meeting</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Decision_Making_BMS_CN__c</fullName>
        <description>Decision Making</description>
        <label>Decision Making</label>
        <picklist>
            <picklistValues>
                <fullName>Decision Maker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assistant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subordinate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Decision_of_Beds_Index_BMS_CN__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Decision of Beds Index</description>
        <label>Decision of Beds Index</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Default_Inventory_Monitoring_Type_vod__c</fullName>
        <description>Defines which Inventory Monitoring Type should open by default when creating a new IM.</description>
        <label>Default Inventory Monitoring Type</label>
        <picklist>
            <picklistValues>
                <fullName>None_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inventory_Monitoring_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Default_Order_Type_vod__c</fullName>
        <description>The order type that is created by default for this account, when creating a new order.</description>
        <label>Default Order Type</label>
        <picklist>
            <picklistValues>
                <fullName>Direct_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transfer_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Department_BMS_CN__c</fullName>
        <description>Department</description>
        <label>Department</label>
        <picklist>
            <picklistValues>
                <fullName>CCU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BUY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OBG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GYN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HEP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HSUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IHEP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PSY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DEN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>END</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CINT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Departments__c</fullName>
        <description>Number of departments at this facility.</description>
        <label># Departments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Device_Trainer_BMS_US__c</fullName>
        <description>VPRO - March 2013 - BMS Global Requirements &amp; Design: Device Trainer specification for Global Sales (sampling) users</description>
        <label>Device Trainer</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Diabetes_Educator_BMS_US__c</fullName>
        <description>VPRO - March 2013 - BMS Global Requirements &amp; Design: Diabetes Educator specification for Global Sales MET (sampling) users</description>
        <label>Diabetes Educator</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disease_Area_Training_BMS_EMEA__c</fullName>
        <label>Med Ed on Disease Area?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Do_Not_Call_vod__c</fullName>
        <description>If set to Yes_vod then calls cannot be recorded against this account.</description>
        <label>Do Not Call?</label>
        <picklist>
            <picklistValues>
                <fullName>No_vod</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Do_Not_Create_Child_Account_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The DISABLE_HIERARCHY_AUTOCREATE custom setting uses this field to indicate that an account should not be added to the Account Hierarchy when creating a new record using the New Record Type Wizard or Parent Account Wizard.  This is a system field and therefore should not be displayed in a page layout.</description>
        <label>Do Not Create Child Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not_Email_BMS_EMEA__c</fullName>
        <description>VPRO 28-Apr-2015: label has been changed from &quot;Do Not Email&quot; to &quot;Do Not Mail&quot;. Ideally the API name would have been changed as well but it&apos;s better to leave it this way for migration purposes.
29-Aug-2014: Highlight customers where no answer at all has been captured (probably the incoming customers)</description>
        <label>Do Not Mail</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Do_Not_Sync_Sales_Data_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The Do Not Sync Sales Data field is used to determine if the Analytics Sales Data should be synced to the VMobile Tablet Edition.  If this field is checked, then the Sales Data will not be synced.</description>
        <label>Do Not Sync Sales Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_you_accept_samples_BMS_US__c</fullName>
        <label>Do you accept samples?</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Do_you_have_infusion_capabilities_BMS_US__c</fullName>
        <label>Do you have infusion capabilities?</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Duals_BMS_US__c</fullName>
        <description>VPRO - December 2012 - BMS Global Requirements &amp; Design: Number of Duals lives, Enrollment section on Organizations for MM users</description>
        <label>Duals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EFAVIRENZ_Speaker_BMS_SHARED__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EFAVIRENZ Speaker?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ELIQUIS_Speaker_BMS_SHARED__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ELIQUIS Speaker?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EMR_System_in_Use_BMS_US__c</fullName>
        <label>EMR System in Use:</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERBITUXiRepSessionCache_BMS__c</fullName>
        <label>ERBITUXiRepSessionCache</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ERM_System_in_Use_BMS_US__c</fullName>
        <label>ERM System in Use:</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Education_BMS_US__c</fullName>
        <description>VPRO - April 2013 - BMS Global Requirements &amp; Design: Education specification for Global Sales CV (sampling) users</description>
        <label>Education</label>
        <picklist>
            <picklistValues>
                <fullName>Harvard University</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stanford University</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Johns Hopkins University</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>University of California - San Francisco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>University of Pennsylvania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Washington University in St. Louis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yale University</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Columbia University</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duke University</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>University of Chicago</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>University of Michigan - Ann Arbor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>University of Washington</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>University of California - Los Angeles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vanderbilt University</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>University of California - San Diego</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cornell University</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>University of Pittsburgh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mount Sinai School of Medicine</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Effective_Date_on_Formulary_BMS_US__c</fullName>
        <description>VPRO - April 2013 - BMS Global Requirements &amp; Design: Effective Date on Formulary specification for Global Sales CV (sampling) users on organization accounts</description>
        <label>Effective Date on Formulary</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Eliquis_Formulary_Status__c</fullName>
        <description>VPRO - April 2013 - BMS Global Requirements &amp; Design: Eliquis Formulary Status specification for Global Sales CV (sampling) users on organization accounts</description>
        <label>Eliquis Formulary Status</label>
        <picklist>
            <picklistValues>
                <fullName>On Formulary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reviewed and denied (off formulary)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not yet reviewed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Eliquis_Rating_BMS_US__c</fullName>
        <label>Eliquis Rating</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_MSL_BMS_SHARED__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Organization_BMS_SHARED__c</fullName>
        <description>VPRO - December 2013 - BMS Core Requirements &amp; Design: Custom field to capture email information for Organization customers.  Standard out-of-the-box email field used on Individual profiles cannot to b added to organization page layouts (system restriction) which is why a custom field was needed.</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_text_format_BMS_SHARED__c</fullName>
        <description>VPRO EMEA Feb 2014: email field in a text format so that Users cannot click on it and open the native iOS mail app. This is the best way to ensure Users won&apos;t send emails to HCPs.</description>
        <label>Email</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_text_rep_maintained_BMS_EMEA__c</fullName>
        <description>VPRO EMEA Jan 2015: Req. 1631. Email field in a text format so that Users cannot click on it and open the native iOS mail app. This is the best way to ensure Users won&apos;t send emails to HCPs.</description>
        <inlineHelpText>Rep maintained email address</inlineHelpText>
        <label>Email</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enable_Restricted_Products_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If set to true then trigger online will populate the Restricted Products on Insert.  Used to allow data loading to bypass the setting of the Restricted Products</description>
        <label>Enable Restricted Products</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Erbitux_CRC_Parent_Product_Rating__c</fullName>
        <label>Erbitux_CRC Parent Product Rating</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Erbitux_CRC_Profile_BMS__c</fullName>
        <label>Erbitux CRC Profile Incomplete Flag</label>
        <picklist>
            <picklistValues>
                <fullName>Profiling complete - All questions answered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Profiling complete - &quot;No&quot; for the treater question</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Profiling Incomplete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not applicable - non-prescribers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Erbitux Drops – Profiling restricted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Erbitux_Drop_BMS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Erbitux Drop?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Erbitux_HNK_Parent_Product_Rating__c</fullName>
        <label>Erbitux HNK Parent Product Rating</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Erbitux_H_N_Profile_BMS__c</fullName>
        <label>Erbitux H&amp;N Profile Incomplete Flag</label>
        <picklist>
            <picklistValues>
                <fullName>Profiling complete - All questions answered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Profiling complete - &quot;No&quot; for the treater question</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Profiling incomplete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not applicable - non-prescribers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Erbitux Drops – Profiling restricted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Erbitux_Speaker_BMS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ERBITUX Speaker?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Erbitux_Target_BMS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>VPRO - November 2011 - BMS Oncology Requirements &amp; Design: Custom field to capture if an account is an ERBITUX target.</description>
        <label>ERBITUX Target</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exclude_from_Zip_to_Terr_Processing_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Territories_vod field will not be overwritten by Zip to Terr processing if this is checked</description>
        <label>Exclude from Zip to Terr Processing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_ID_vod__c</fullName>
        <description>External ID is used for data loading only.</description>
        <label>External ID</label>
        <length>120</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FFS_Medicaid_BMS_US__c</fullName>
        <description>VPRO - December 2012 - BMS Global Requirements &amp; Design: Number of FFS Medicaid lives, Enrollment section on Organizations for MM users</description>
        <label>FFS Medicaid</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fax_Access_BMS_EMEA__c</fullName>
        <description>VPRO - November 2013 - BMS EMEA Requirements: New field specific for Access-EMEA users</description>
        <label>zDELETE_Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Fax_MSL_BMS_SHARED__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Fed_Tax_ID_GRP_BMS__c</fullName>
        <label>Fed Tax ID (GRP)</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Finder_Num_BMS_CA__c</fullName>
        <description>Finder number of the HCP</description>
        <label>Finder Num</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Formatted_Name_vod__c</fullName>
        <description>This formula field is used to display a well formatted person account name in (lastname, firstname suffix) format.</description>
        <formula>IF( 
IsPersonAccount , 

IF( 
RecordType.Name == &apos;Business_Professional_vod&apos;, 
LastName &amp; &quot;, &quot; &amp; FirstName &amp; &quot; (&quot; &amp; Primary_Parent_vod__r.Name &amp; &quot;)&quot; , 
LastName &amp; IF( LEN(FirstName)=0, &quot;&quot;, &quot;, &quot;&amp;FirstName) &amp; IF( LEN(Middle_vod__c)=0, &quot;&quot;, &quot;, &quot;&amp;Middle_vod__c) &amp; IF(ISNULL(Suffix_vod__c), &quot;&quot;, &quot; &quot;&amp;Suffix_vod__c)), 

IF( Primary_Parent_vod__c != &apos;&apos;, 
Name &amp; &quot; - &quot; &amp; Primary_Parent_vod__r.Name, 

Name 


))</formula>
        <label>Formatted Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Formulary_Decision_BMS_US__c</fullName>
        <label>Formulary Decision</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Formulary_Decisions_BMS_US__c</fullName>
        <description>VPRO - April 2013 - BMS Global Requirements &amp; Design: Formulary Decisions specification for Global Sales CV (sampling) users on organization accounts</description>
        <label>Formulary Decisions:</label>
        <picklist>
            <picklistValues>
                <fullName>Local/Institution-level Decisions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IDN or System-level Decisions</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Formulary_Milestone_Status_BMS_US__c</fullName>
        <description>VPRO - April 2013 - BMS Global Requirements &amp; Design: Formulary Milestone States specification for Global Sales CV (sampling) users on organization accounts</description>
        <label>Formulary Milestone Status:</label>
        <picklist>
            <picklistValues>
                <fullName>1-Building Awareness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2-Aligning to the Advocate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3-Formulary Request Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4-P&amp;T Review Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5-Formulary Acceptance</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Furigana_vod__c</fullName>
        <description>Field for Japanese users input Katakana or Hiragana in order to search for accounts based on Furigana</description>
        <label>Furigana</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GAS_Aligned_BMS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GAS Aligned?</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>